--- a/.github/workflows/release-helm.yml
+++ b/.github/workflows/release-helm.yml
@@ -21,11 +21,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configure Git
         run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
 
       - name: Install Helm
         uses: azure/setup-helm@v3
@@ -57,40 +58,40 @@ jobs:
           done
 
       - name: Checkout gh-pages branch
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
-          path: gh-pages
-        continue-on-error: true
-
-      - name: Create gh-pages branch if needed
-        if: failure()
         run: |
-          mkdir -p gh-pages
-          cd gh-pages
-          git init
-          git remote add origin https://github.com/${{ github.repository }}.git
-          git checkout -b gh-pages
-          cd ..
+          git fetch origin gh-pages:gh-pages || true
+          if git show-ref --verify --quiet refs/heads/gh-pages; then
+            echo "gh-pages branch exists"
+            git worktree add gh-pages-deploy gh-pages
+          else
+            echo "Creating gh-pages branch"
+            git worktree add --detach gh-pages-deploy
+            cd gh-pages-deploy
+            git checkout --orphan gh-pages
+            git rm -rf . || true
+            touch index.yaml
+            echo "# Homelab Packages Helm Repository" > README.md
+            git add .
+            git commit -m "Initialize gh-pages branch"
+            cd ..
+          fi
 
       - name: Update Helm repository index
         run: |
-          if [ -f "gh-pages/index.yaml" ]; then
-            helm repo index .deploy --url https://${{ github.repository_owner }}.github.io/homelab-packages --merge gh-pages/index.yaml
+          if [ -f "gh-pages-deploy/index.yaml" ]; then
+            helm repo index .deploy --url https://${{ github.repository_owner }}.github.io/homelab-packages --merge gh-pages-deploy/index.yaml
           else
             helm repo index .deploy --url https://${{ github.repository_owner }}.github.io/homelab-packages
           fi
-          cp .deploy/* gh-pages/ || true
+          cp .deploy/* gh-pages-deploy/ || true
           
       - name: Push to gh-pages
-        working-directory: ./gh-pages
+        working-directory: ./gh-pages-deploy
         run: |
           git add .
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git config user.name "$GITHUB_ACTOR"
-            git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
             git commit -m "Update Helm repository with charts from ${{ github.sha }}"
-            git push origin gh-pages --force
+            git push "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
           fi
