Fix azure/setup-helm GITHUB_TOKEN error
- Add token parameter to azure/setup-helm@v3 action
- Pass github.token to both CI and release workflows
- This fixes the '@octokit/auth-action' error when fetching Helm releases

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         uses: azure/setup-helm@v3
         with:
           version: 'latest'
+          token: ${{ github.token }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
