--- a/.github/workflows/release-helm.yml
+++ b/.github/workflows/release-helm.yml
@@ -32,6 +32,7 @@ jobs:
         uses: azure/setup-helm@v3
         with:
           version: 'latest'
+          token: ${{ github.token }}
 
       - name: Add helm repositories
         run: |
