Add automatic password generation for Grafana admin
- Added _helpers.tpl with password generation function
- Creates grafana-admin-secret.yaml to store generated password
- Password auto-generates as random 16-char string if not provided
- Preserves existing passwords on upgrades (uses lookup)
- Updated NOTES.txt to show how to retrieve the password
- Bump version to 0.2.0 (minor version for new feature)

Users can now:
- Leave adminPassword empty for auto-generated secure password
- Set adminPassword to override with custom password
- Retrieve password with: kubectl get secret <release>-grafana-admin -n <namespace> -o jsonpath='{.data.admin-password}' | base64 -d

--- a/charts/observability-stack/values.yaml
+++ b/charts/observability-stack/values.yaml
@@ -37,7 +37,15 @@ kubePrometheusStack:
   # Grafana configuration
   grafana:
     enabled: true
-    adminPassword: "changeme"
+    
+    # Admin credentials
+    # Leave adminPassword empty to auto-generate a random password
+    # Or set it to override with your own password
+    adminPassword: ""  # Auto-generates if empty
+    
+    # Use the generated secret for admin credentials
+    admin:
+      existingSecret: "observability-stack-grafana-admin"
     
     persistence:
       enabled: true
