Add Loki for log aggregation to observability-stack
- Added Loki v6.24.0 as a dependency
- Configured Loki in SingleBinary mode with 50Gi storage
- Set 30-day retention period for logs
- Auto-configured Grafana with Loki datasource
- Updated NOTES.txt with Loki access information
- Bump version to 0.3.0 (minor version for new feature)

Features:
- Loki gateway accessible at <release>-loki-gateway
- Grafana automatically configured with both Prometheus and Loki
- Filesystem storage with 50Gi PVC
- ServiceMonitor enabled for monitoring Loki itself

--- a/charts/observability-stack/Chart.yaml
+++ b/charts/observability-stack/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: observability-stack
 description: Complete observability stack for Kubernetes with Prometheus, Grafana, Loki, Tempo, and Alloy
 type: application
-version: 0.2.0
+version: 0.3.0
 appVersion: "1.0.0"
 keywords:
   - monitoring
@@ -27,3 +27,9 @@ dependencies:
     version: "69.2.0"
     repository: "https://prometheus-community.github.io/helm-charts"
     condition: kubePrometheusStack.enabled
+  
+  # Loki for log aggregation
+  - name: loki
+    version: "6.24.0"
+    repository: "https://grafana.github.io/helm-charts"
+    condition: loki.enabled
