--- a/charts/observability-stack/values.yaml
+++ b/charts/observability-stack/values.yaml
@@ -70,6 +70,15 @@ kubePrometheusStack:
           url: http://observability-stack-kube-p-prometheus:9090
           access: proxy
           isDefault: true
+          jsonData:
+            timeInterval: "30s"
+        - name: Loki
+          type: loki
+          url: http://observability-stack-loki-gateway
+          access: proxy
+          isDefault: false
+          jsonData:
+            maxLines: 5000
   
   # AlertManager configuration with WORKING storage
   alertmanager:
@@ -100,3 +109,94 @@ kubePrometheusStack:
   # Kube state metrics configuration
   kubeStateMetrics:
     enabled: true
+
+# Loki configuration
+loki:
+  enabled: true
+  
+  # Deployment mode - single binary for simplicity
+  deploymentMode: SingleBinary
+  
+  loki:
+    auth_enabled: false
+    
+    # Storage configuration - using filesystem for simplicity
+    storage:
+      type: filesystem
+    
+    # Common configuration
+    commonConfig:
+      replication_factor: 1
+      path_prefix: /var/loki
+    
+    # Schema configuration
+    schemaConfig:
+      configs:
+        - from: "2024-01-01"
+          store: tsdb
+          object_store: filesystem
+          schema: v13
+          index:
+            prefix: loki_index_
+            period: 24h
+    
+    # Storage configuration
+    storage_config:
+      filesystem:
+        directory: /var/loki/chunks
+      tsdb_shipper:
+        active_index_directory: /var/loki/tsdb-index
+        cache_location: /var/loki/tsdb-cache
+    
+    # Limits configuration
+    limits_config:
+      retention_period: 720h  # 30 days
+      ingestion_rate_mb: 100
+      ingestion_burst_size_mb: 200
+      per_stream_rate_limit: 10MB
+      per_stream_rate_limit_burst: 20MB
+      reject_old_samples: true
+      reject_old_samples_max_age: 168h
+    
+    # Query configuration
+    query_scheduler:
+      max_outstanding_requests_per_tenant: 2048
+    
+    # Compactor configuration  
+    compactor:
+      retention_enabled: true
+      retention_delete_delay: 2h
+      retention_delete_worker_count: 50
+  
+  # Single binary configuration
+  singleBinary:
+    replicas: 1
+    
+    # Persistence for data
+    persistence:
+      enabled: true
+      storageClass: k8s-csi
+      size: 50Gi
+    
+    # Resources
+    resources:
+      requests:
+        cpu: 100m
+        memory: 256Mi
+      limits:
+        cpu: 1
+        memory: 1Gi
+  
+  # Gateway configuration (nginx)
+  gateway:
+    enabled: true
+    replicas: 1
+    
+  # Monitoring
+  monitoring:
+    serviceMonitor:
+      enabled: true
+    
+  # Test configuration
+  test:
+    enabled: false
