Fix Loki deployment mode configuration
- Explicitly set read/write/backend replicas to 0
- Ensures SingleBinary mode works correctly
- Fixes deployment conflict error
- Bump version to 0.3.1

--- a/charts/observability-stack/values.yaml
+++ b/charts/observability-stack/values.yaml
@@ -191,6 +191,14 @@ loki:
   gateway:
     enabled: true
     replicas: 1
+  
+  # Disable other deployment modes
+  read:
+    replicas: 0
+  write:
+    replicas: 0
+  backend:
+    replicas: 0
     
   # Monitoring
   monitoring:
