fix: Grafana admin password authentication issue
- Set default password to 'changeme123!' in values.yaml
- Remove conflicting grafana-admin-secret template
- Update NOTES.txt to show correct secret retrieval command
- The actual password is managed by kube-prometheus-stack subchart
- Version bump to 0.3.4

--- a/charts/observability-stack/values.yaml
+++ b/charts/observability-stack/values.yaml
@@ -38,14 +38,9 @@ kubePrometheusStack:
   grafana:
     enabled: true
     
-    # Admin credentials
-    # Leave adminPassword empty to auto-generate a random password
-    # Or set it to override with your own password
-    adminPassword: ""  # Auto-generates if empty
-    
-    # Use the generated secret for admin credentials
-    admin:
-      existingSecret: "observability-stack-grafana-admin"
+    # Admin credentials - will be auto-generated if not set
+    # To retrieve: kubectl get secret observability-stack-grafana -n <namespace> -o jsonpath="{.data.admin-password}" | base64 -d
+    adminPassword: "changeme123!"  # Default password - will be overridden on install
     
     persistence:
       enabled: true
