feat: Disable Loki Canary and caches to save resources
- Disabled lokiCanary DaemonSet (was creating 4 pods for testing)
- Disabled chunksCache and resultsCache to reduce resource usage
- These can be re-enabled if better performance is needed
- Reduces pod count from 7 to 1 for Loki (just the main server)
- Version bump to 0.4.1

--- a/charts/observability-stack/values.yaml
+++ b/charts/observability-stack/values.yaml
@@ -189,3 +189,15 @@ loki:
   # Test configuration
   test:
     enabled: false
+  
+  # Disable Loki Canary - it's a testing tool that continuously writes/reads logs
+  # to verify Loki is working. Not needed for production use.
+  lokiCanary:
+    enabled: false
+  
+  # Disable caches to save resources (optional - improves performance if enabled)
+  # Enable these if you have enough resources and want better query performance
+  chunksCache:
+    enabled: false  # Caches compressed log chunks
+  resultsCache:
+    enabled: false  # Caches query results
