fix: Remove undefined template reference in loki-datasource-configmap
- Fixed template error by replacing undefined observability-stack.labels
- Added explicit labels instead of using include
- Version bump to 0.4.2

--- a/charts/observability-stack/templates/loki-datasource-configmap.yaml
+++ b/charts/observability-stack/templates/loki-datasource-configmap.yaml
@@ -8,7 +8,10 @@ metadata:
     grafana_datasource: "1"
     app: kube-prometheus-stack-grafana
     release: {{ .Release.Name }}
-    {{- include "observability-stack.labels" . | nindent 4 }}
+    app.kubernetes.io/name: {{ .Chart.Name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/version: {{ .Chart.AppVersion }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 data:
   loki-datasource.yaml: |-
     apiVersion: 1
